Refactors groups
