# pkg/relations/grouproute/controller.go
@@ -12,13 +12,11 @@ import (
 type Pair struct {
 	GroupId int `json:"groupId" validate:"required"`
 	RouteId int `json:"routeId" validate:"required"`
-}
+} // @name groupRoutePair
 
 type Repository interface {
-	List(ctx context.Context, groupId int) ([]Route, error)
-	ListNotInGroup(ctx context.Context, groupId int) ([]Route, error)
-	InsertMany(ctx context.Context, params []Pair) ([]Route, error)
-	Insert(ctx context.Context, params Pair) (*Route, error)
+	List(ctx context.Context, filter Filter) ([]Route, int, error)
+	Insert(ctx context.Context, params []Pair) ([]Route, error)
 	Delete(ctx context.Context, params []Pair) error
 }
 
@@ -34,6 +32,16 @@ func NewController(rep Repository) *controller {
 	}
 }
 
+// @tags group-route
+// @description Creates group-routes relations
+// @id group-routes.create
+// @accept application/json
+// @param req body insertRequest true "request"
+// @produce application/json
+// @success 200	{object} insertResponse
+// @failure 400 {object} util.ResponseWithError
+// @failure 500 {object} util.ResponseWithError
+// @router /v1/group/route/create [post]
 func (c *controller) create(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	var req insertRequest
@@ -43,7 +51,12 @@ func (c *controller) create(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	routes, err := c.rep.InsertMany(ctx, insertRequestConvert(req))
+	if err := c.validator.Struct(req); err != nil {
+		util.NewResp(w, r).Error(err).Status(http.StatusBadRequest).Send()
+		return
+	}
+
+	routes, err := c.rep.Insert(ctx, req.Pairs)
 	if err != nil {
 		util.NewResp(w, r).Error(err).Status(http.StatusInternalServerError).Send()
 		return
@@ -51,6 +64,16 @@ func (c *controller) create(w http.ResponseWriter, r *http.Request) {
 	util.NewResp(w, r).Status(http.StatusOK).Json(routes).Send()
 }
 
+// @tags group-route
+// @description Gets list of group-routes relations
+// @id group-routes.list
+// @accept application/json
+// @param req body listRequest true "request"
+// @produce application/json
+// @success 200	{object} listResponse
+// @failure 400 {object} util.ResponseWithError
+// @failure 500 {object} util.ResponseWithError
+// @router /v1/group/route/list [post]
 func (c *controller) list(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
@@ -66,40 +89,40 @@ func (c *controller) list(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	var list []Route
-	var err error
-
-	if req.BelongToGroup {
-		list, err = c.rep.List(ctx, req.GroupId)
-	} else {
-		list, err = c.rep.ListNotInGroup(ctx, req.GroupId)
-	}
-
+	list, total, err := c.rep.List(ctx, req.Filter)
 	if err != nil {
 		util.NewResp(w, r).Error(err).Status(http.StatusInternalServerError).Send()
 		return
 	}
-	util.NewResp(w, r).Status(http.StatusOK).Json(newListResponse(list)).Send()
+	util.NewResp(w, r).Status(http.StatusOK).Json(newListResponse(list, total)).Send()
 }
 
+// @tags group-route
+// @description Deletes group-routes relations
+// @id group-routes.delete
+// @accept application/json
+// @param req body deleteRequest true "request"
+// @produce application/json
+// @success 200
+// @failure 400 {object} util.ResponseWithError
+// @failure 500 {object} util.ResponseWithError
+// @router /v1/group/route/delete [post]
 func (c *controller) delete(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 
-	var req []Pair
+	var req deleteRequest
 
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
 		util.NewResp(w, r).Error(err).Status(http.StatusBadRequest).Send()
 		return
 	}
 
-	rr := deleteRequest{Params: req}
-
-	if err := c.validator.Struct(rr); err != nil {
+	if err := c.validator.Struct(req); err != nil {
 		util.NewResp(w, r).Error(err).Status(http.StatusBadRequest).Send()
 		return
 	}
 
-	err := c.rep.Delete(ctx, req)
+	err := c.rep.Delete(ctx, req.Pairs)
 	if err != nil {
 		util.NewResp(w, r).Error(err).Status(http.StatusInternalServerError).Send()
 		return
