# pkg/relations/grouproute/model.go
@@ -4,4 +4,4 @@ import (
 	"github.com/hardstylez72/bzdacs/pkg/route"
 )
 
-type Route route.Route
+type Route route.Route // @name groupRouteRoute
